# composable-batch-erc

./: .env.example  .gitignore  CONTRIBUTING.md  erc-draft.md  ethereum-magicians-post.md  package-lock.json  package.json  tldr.md
.claude/: settings.json
contracts/: ComposableExecutionBase.sol  ComposableExecutionLib.sol  ComposableExecutionModule.sol
contracts/lens/: AaveLens.sol  ComposableLens.sol
contracts/types/: Constants.sol
demo/: .env.example  demo-leverage-loop.md  index.html  package-lock.json  package.json  vite.config.ts
demo/api/: rpc.ts
demo/src/: App.tsx  index.css  main.tsx  wagmi.ts
orchestrator-node/: .dockerignore  .env.example  Dockerfile  README.md  TRACING_SETUP.md  biome.json  compose.yml  docker-compose.observability.yml  docker-compose.yml  package.json  tsconfig.build.json  tsconfig.json  vitest.config.mjs
orchestrator-node/apps/token-storage-detection/: .env.example  Cargo.toml  Dockerfile  README.md
orchestrator-node/apps/token-storage-detection/crates/token-bss/: Cargo.toml
orchestrator-node/apps/token-storage-detection/src/: config.rs  db.rs  handlers.rs  main.rs  server.rs  state.rs  utils.rs
orchestrator-node/dashboards/: api-performance.json
orchestrator-node/docs/: architecture.md  chain-configuration.md  dependencies.md  operations.md  run-and-maintain.md
orchestrator-node/src/: dev.ts  main.ts  tracing-opentelemetry.ts
scripts/: deploy-aave-lens.ts  verify-aave-lens.ts
sdk/: DESIGN.md
sdk/examples/: collateral-swap.ts  conditional-deleverage.ts  create-vault.ts  debt-refinance.ts  dustless-migration.ts  harvest-reinvest.ts  (+4 more)
(+269 files in other folders)
