[package]
name = "token-storage-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
token-bss = { path = "crates/token-bss" }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4316c68", features = [
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "node-bindings",
] }
eyre = "0.6.12"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1" }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
serde = "1.0.188"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
redis = "0.32.5"
serde_json = "1.0.108"
poor-mans-tracer = { git = "https://github.com/halo3mic/poor-mans-tracer", rev = "fd927f1" }
reqwest = "0.12.4"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
]